--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    
   </head>
 
-  <body class="h-14 bg-gradient-to-r from-cyan-400 to-blue-800">
+  <body class="h-14 bg-gradient-to-r from-cyan-400 to-blue-800 font-serif  ">
 
     <header class="text-center text-a p-10 text-3xl font-extrabold h-14 bg-gradient-to-r from-sky-400 to-indigo-800">
       
@@ -24,16 +24,14 @@
 
         <input
           type="text"
-          placeholder="Austin, Texas"
-          maxlength="40"
-          size="25"
-        />
+          placeholder="Enter City Name" spellcheck="false">
+          
         <button class="bg-blue-200 pyx20 w-40 hover:bg-white rounded ">Search</button>
         </div>
 
         <div class="flex gap-10 flex-col w-40  ml-8 mt-20 " >
         <button class="bg-zinc-400 hover:bg-white rounded">Atlanta</button>
-        <button class="bg-zinc-400 hover:bg-white rounded ">Salt Lake City</button>
+        <button class="bg-zinc-400 hover:bg-white rounded">Salt Lake City</button>
         <button class="bg-zinc-400 hover:bg-white rounded">Denver</button>
         <button class="bg-zinc-400 hover:bg-white rounded">Austin</button>
         <button class="bg-zinc-400 hover:bg-white rounded">Orlando</button>
@@ -50,6 +48,7 @@
       </div>
       <IMG SRC="./Assets/images/giphy.gif" alt="gif">
     </main>
+    <script src="Assets/script.js"></script>
   </body>
   <footer>Created by Brendalee Alcala &#9829;</footer>
 </html>
