--- a/index.html
+++ b/index.html
@@ -23,19 +23,20 @@
   <main>
 
 
-    <div class="search-container">
+    <div class="search-container    ">
       <h2  class="text-4xl" >Search for a City:</h2>
 
-      <input type="text" placeholder="Enter City Name" spellcheck="false">
+      <input id="input-text" type="text" placeholder="Enter City Name" spellcheck="false">
 
-      <button class="bg-gray-400  rounded-lg  flex-col  ">Search</button>
+      <button id="search-btn" class="bg-gray-400  rounded-lg  flex flex-col ">Search</button>
     </div>
 
     <div class=" flex justify-center border border-4  float-center items-center flex-col content-center">
-      <h1 class="text-2xl">Atlanta (10/01/2022) </h1>
-      <p> Temp :76.62 °F </p>
-      <p> Wind: 8.43 MPH</p>
-      <p> Humidity:44 %</p>
+      <h1 id="city-name-text" class="text-2xl"> </h1>
+      <img src="" alt="" id="icon">
+      <p id="temp"> Temp :76.62 °F </p>
+      <p id="wind"> Wind: 8.43 MPH</p>
+      <p id="humid"> Humidity:44 %</p>
     </div>
 
 
@@ -84,7 +85,7 @@
 
    
   </main>
-  <script src="Assets/script.js"></script>
+  <script src="./Assets/script.js"></script>
 </body>
 <footer>Created by Brendalee Alcala &#9829;</footer>
 
