added more styling

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
 <body class="h-14 bg-gradient-to-r from-cyan-400 to-blue-800  flex flex-col   " >
 
-  <header class="h-20 bg-gradient-to-r from-sky-400 to-indigo-800 text-5xl text-center " >
+  <header class="h-20 bg-gradient-to-r from-sky-400 to-indigo-800 text-5xl text-center  text-green-300 " >
     Weather Dashboard
 
-    <IMG class="gifs" SRC="./Assets/images/giphy.gif" alt="gif"> 
+    <IMG   class="float-right"    class="gifs" SRC="./Assets/images/giphy.gif" alt="gif"      > 
 
   </header>
 
@@ -31,7 +31,7 @@
       <button id="search-btn" class="bg-gray-400  rounded-lg  flex flex-col ">Search</button>
     </div>
 
-    <div class=" flex justify-center border border-4  float-center items-center flex-col content-center">
+    <div class=" flex justify-center border  border-x-4 text-4xl  items-center flex-col content-center py-8 max-w-screen-md shadow-2xl h-72  text-white    ">
       <h1 id="city-name-text" class="text-2xl"> </h1>
       <img src="" alt="" id="icon">
       <p id="temp"> Temp :76.62 °F </p>
@@ -43,11 +43,11 @@
 
 
     <div   class=" text-center   ">
-    <div class="forecast  text-3xl mt-6 mb-8">
+    <div class="forecast  text-3xl mt-6 mb-8  ">
       <h2> 5-Day Forecast: </h2>
     </div>
 
-    <div class="  border grid grid-cols-5  divide-x  h-64 text-2xl text-white  bg-cyan-800  items-center   " >
+    <div class="  border grid grid-cols-5  divide-x  h-64 text-2xl text-white  bg-cyan-800  items-center py-8  h-72  " >
     
       <div class="card1"> 10/1/2023 
       <p>Temp: 63.55 °F</p> 
