--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
 </head>
 
-<body class="h-14 bg-gradient-to-r from-cyan-400 to-blue-800    " >
+<body class="h-14 bg-gradient-to-r from-cyan-400 to-blue-800    ">
 
-  <header class="h-20 bg-gradient-to-r from-sky-400 to-indigo-800 text-5xl text-center  text-green-300 " >
+  <header class="h-20 bg-gradient-to-r from-sky-400 to-indigo-800 text-5xl text-center  text-green-300 ">
     Weather Dashboard
 
-    <!-- <IMG   class="float-right"    class="gifs" SRC="./Assets/images/giphy.gif" alt="gif"      >  -->
+    <IMG class="float-right   " class="gifs" SRC="./Assets/images/giphy.gif" alt="gif">
 
   </header>
 
@@ -24,14 +24,15 @@
 
 
     <div class="   flex justify-center text-2xl  items-center flex-col content-center  h-72  float-left block ">
-      <h2  class="text-4xl" >Search for a City:</h2>
+      <h2 class="text-4xl">Search for a City:</h2>
 
-      <input id="input-text" type="text" placeholder="Enter City Name" spellcheck="false"   class="uppercase ">
+      <input id="input-text" type="text" placeholder="Enter City Name" spellcheck="false" class="uppercase ">
 
       <button id="search-btn" class="bg-gray-400  rounded-lg  flex flex-col ">Search</button>
     </div>
 
-    <div class="  flex justify-center border  text-5xl  items-center flex-col content-center py-8 max-w-screen-md shadow-2xl h-72  text-white uppercase ">
+    <div
+      class="  flex justify-center border  text-5xl  items-center flex-col content-center py-8 max-w-screen-md shadow-2xl h-72  text-white uppercase ">
       <h1 id="city-name-text" class="text-2xl"> </h1>
       <img src="" alt="" id="icon">
       <p id="temp"> Temp :76.62 °F </p>
@@ -42,48 +43,50 @@
 
 
 
-    <div   class=" text-center ">
-    <div class="forecast  text-3xl mt-20 mb-8  ">
-      <h2> 5-Day Forecast: </h2>
-    </div>
+    <div class=" text-center ">
+      <div class="forecast  text-3xl mt-20 mb-8  ">
+        <h2> 5-Day Forecast: </h2>
+      </div>
 
-    <div class="  border grid grid-cols-5  divide-x  h-64 text-2xl text-white  bg-cyan-800  items-center py-8  h-72 float-center " >
-    
-      <div class="card1"> 10/1/2023 
-      <p>Temp: 63.55 °F</p> 
-      <p>Wind: 3.94 MPH</p>
-      <p>Humidity: 63%</p>
-    </div>
-    <div class="card2"> 10/2/2023
-      <p>Temp: 63.55 °F</p> 
-      <p>Wind: 3.94 MPH</p>
-      <p>Humidity: 63%</p>
-    </div>
-    <div class="card3"> 10/3/2023
-      <p>Temp: 63.55 °F</p> 
-      <p>Wind: 3.94 MPH</p>
-      <p>Humidity: 63%</p> </div>
-    <div class="card4"> 10/4/2023 
-      <p>Temp: 63.55 °F</p> 
-      <p>Wind: 3.94 MPH</p>
-      <p>Humidity: 63%</p>
-    </div>
-    <div class="card5"> 10/5/2023 
-      <p>Temp: 63.55 °F</p> 
-      <p>Wind: 3.94 MPH</p>
-      <p>Humidity: 63%</p>
-    </div>
+      <div
+        class="  border grid grid-cols-5  divide-x  h-64 text-2xl text-white  bg-cyan-800  items-center py-8  h-72 float-center ">
 
-  </div>
-  
+        <div class="card1"> 10/1/2023
+          <p>Temp: 63.55 °F</p>
+          <p>Wind: 3.94 MPH</p>
+          <p>Humidity: 63%</p>
+        </div>
+        <div class="card2"> 10/2/2023
+          <p>Temp: 63.55 °F</p>
+          <p>Wind: 3.94 MPH</p>
+          <p>Humidity: 63%</p>
+        </div>
+        <div class="card3"> 10/3/2023
+          <p>Temp: 63.55 °F</p>
+          <p>Wind: 3.94 MPH</p>
+          <p>Humidity: 63%</p>
+        </div>
+        <div class="card4"> 10/4/2023
+          <p>Temp: 63.55 °F</p>
+          <p>Wind: 3.94 MPH</p>
+          <p>Humidity: 63%</p>
+        </div>
+        <div class="card5"> 10/5/2023
+          <p>Temp: 63.55 °F</p>
+          <p>Wind: 3.94 MPH</p>
+          <p>Humidity: 63%</p>
+        </div>
 
-
-   
+      </div>
 
 
 
 
-   
+
+
+
+
+
   </main>
   <script src="./Assets/script.js"></script>
 </body>
